# signal-bot-orx

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml  orx-search-ci.yml
bridge/: .gitignore  README.md  package-lock.json  package.json  whatsapp-bridge.js
docs/: README.md
orx-search/: README.md  pyproject.toml  pyrightconfig.json
orx-search/src/orx_search/: __init__.py  base.py  cli.py  http_client.py  registry.py  utils.py
orx-search/src/orx_search/providers/: __init__.py  annasarchive.py  bing_news.py  books.py  brave.py  duckduckgo.py  google.py  grokipedia.py  images.py  jmail.py  lolcow.py  lolcow_cyraxx.py  lolcow_larson.py  mojeek.py  news.py  videos.py  weather.py  wikipedia.py  yahoo.py  yahoo_news.py  yandex.py  youtube_videos.py
orx-search/tests/: test_jmail.py
scripts/: format.sh
src/signal_bot_orx/: .gitignore  chat_context.py  chat_prompt.py  config.py  default_chat_system_prompt.md  group_resolver.py  main.py  messaging.py  search_client.py  search_context.py  search_service.py  signal_client.py  telegram.py  telegram_client.py  types.py  weather_client.py  webhook.py  whatsapp.py  whatsapp_client.py
src/signal_box_orx/: chat_prompt.py  config.py  dedupe.py  group_resolver.py  main.py  openrouter_client.py  parsing.py  signal_client.py  types.py  webhook.py
tests/: test_chat_context.py  test_chat_prompt.py  test_config.py  test_dedupe.py  test_group_resolver.py  test_openrouter_client.py  test_search_client.py  test_search_context.py  test_search_service.py  test_signal_client.py  test_telegram.py  test_telegram_client.py  test_weather_client.py  test_webhook_auth.py  test_webhook_logic.py  test_webhook_weather.py
