[project]
name = "signal-bot-orx"
version = "2026.2.13"
description = "Webhook-driven Signal bot with mention-triggered OpenRouter chat replies and optional image generation mode."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.md"]
authors = [
    { name = "Ben Chitty", email = "htmlgxn@pm.me" },
]
keywords = ["signal", "bot", "openrouter", "fastapi", "webhook"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "ddgs>=9.10.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "uvicorn>=0.35.0",
]

[project.scripts]
signal-bot-orx = "signal_bot_orx.main:main"

[project.urls]
Homepage = "https://github.com/htmlgxn/signal-bot-orx"
Repository = "https://github.com/htmlgxn/signal-bot-orx"
Issues = "https://github.com/htmlgxn/signal-bot-orx/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "tomli-w>=1.2.0",
    "ty>=0.0.16",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RET", "RSE", "ARG", "PTH", "TRY", "PGH", "RUF"]
ignore = ["E501", "TRY003", "TRY300"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.rules]
unresolved-attribute = "ignore"
