[project]
name = "orx-search"
version = "2026.2.16"
description = "Standalone modular search package for signal-bot-orx"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "httpx[http2]>=0.27.0",
    "lxml>=5.1.0",
    "fake-useragent>=1.5.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.scripts]
orx-search = "orx_search.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.1",
    "mypy>=1.10.0",
    "types-lxml>=2024.4.14",
]
